chore(inkless:ci): add kafka.server tests to nightly workflow (#233)
* chore(inkless): warn rxjava leaks threads

Infinispan depends on rxjava, and it fails to pass the leaky thread
validation on kafka.server tests.
Changing this to a warning

* chore(inkless:ci): adding kafka-server tests to CI [INK-127]

Include all kafka.server unit tests to the CI nightly, along
checking (not testing) all mods on build CI.